--- a/consul-ui-toolkit/package.json
+++ b/consul-ui-toolkit/package.json
@@ -21,7 +21,7 @@
     "lint:hbs:fix": "ember-template-lint . --fix --no-error-on-unmatched-pattern",
     "lint:js:fix": "eslint . --fix",
     "start": "rollup --config --watch",
-    "test": "echo 'A v2 addon does not have tests, run tests in test-app'",
+    "test": "echo 'A v2 addon does not have tests, run tests in documentation'",
     "prepack": "rollup --config"
   },
   "dependencies": {
