--- a/documentation/package.json
+++ b/documentation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-app",
+  "name": "documentation",
   "version": "0.0.0",
   "private": true,
   "description": "Test app for consul-ui-toolkit addon",
