--- a/documentation/package.json
+++ b/documentation/package.json
@@ -32,7 +32,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^7.6.0",
-    "consul-ui-toolkit": "^0.0.0",
+    "@hashicorp/consul-ui-toolkit": "^0.0.0",
     "ember-auto-import": "^2.5.0",
     "ember-cli": "~4.10.0",
     "ember-cli-app-version": "^5.0.0",
