Add MPL-2.0 license

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.0.0",
   "private": true,
   "repository": "",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "author": "",
   "scripts": {
     "build": "yarn workspace @hashicorp/consul-ui-toolkit run build",
