--- a/documentation/package.json
+++ b/documentation/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Test app for consul-ui-toolkit addon",
   "repository": "",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "author": "",
   "directories": {
     "doc": "doc",
