--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -6,7 +6,7 @@
     "ember-addon"
   ],
   "repository": "",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "author": "",
   "files": [
     "addon-main.cjs",
