--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.0",
   "private": true,
-  "repository": "",
+  "repository": "https://github.com/hashicorp/consul-ui-toolkit",
   "license": "MPL-2.0",
   "author": "",
   "scripts": {
