--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -5,7 +5,11 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hashicorp/consul-ui-toolkit",
+    "directory": "toolkit"
+  },
   "license": "MPL-2.0",
   "author": "",
   "files": [
