--- a/documentation/package.json
+++ b/documentation/package.json
@@ -29,10 +29,39 @@
     "@embroider/test-setup": "^1.7.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@hashicorp/consul-ui-toolkit": "^0.0.0",
+    "@tsconfig/ember": "^2.0.0",
+    "@types/ember": "^4.0.3",
+    "@types/ember-data": "^4.4.8",
+    "@types/ember-data__adapter": "^4.0.1",
+    "@types/ember-data__model": "^4.0.0",
+    "@types/ember-data__serializer": "^4.0.1",
+    "@types/ember-data__store": "^4.0.2",
+    "@types/ember-qunit": "^6.1.1",
+    "@types/ember-resolver": "^9.0.0",
+    "@types/ember__application": "^4.0.5",
+    "@types/ember__array": "^4.0.3",
+    "@types/ember__component": "^4.0.12",
+    "@types/ember__controller": "^4.0.4",
+    "@types/ember__debug": "^4.0.3",
+    "@types/ember__destroyable": "^4.0.1",
+    "@types/ember__engine": "^4.0.4",
+    "@types/ember__error": "^4.0.2",
+    "@types/ember__object": "^4.0.5",
+    "@types/ember__polyfills": "^4.0.1",
+    "@types/ember__routing": "^4.0.12",
+    "@types/ember__runloop": "^4.0.2",
+    "@types/ember__service": "^4.0.2",
+    "@types/ember__string": "^3.0.10",
+    "@types/ember__template": "^4.0.1",
+    "@types/ember__test": "^4.0.1",
+    "@types/ember__test-helpers": "^2.9.1",
+    "@types/ember__utils": "^4.0.2",
+    "@types/qunit": "^2.19.4",
+    "@types/rsvp": "^4.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^7.6.0",
-    "@hashicorp/consul-ui-toolkit": "^0.0.0",
     "ember-auto-import": "^2.5.0",
     "ember-cli": "~4.10.0",
     "ember-cli-app-version": "^5.0.0",
@@ -42,6 +71,7 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
+    "ember-cli-typescript": "^5.2.1",
     "ember-data": "~4.9.1",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-fetch": "^8.1.2",
@@ -64,6 +94,7 @@
     "qunit": "^2.19.3",
     "qunit-dom": "^2.0.0",
     "tracked-built-ins": "^3.1.0",
+    "typescript": "^5.0.2",
     "webpack": "^5.75.0"
   },
   "engines": {
