Add changesets and initialize (#3)
* Add changesets and initialize

* Add .tool-versions to gitignore

* Add release action and yarn scripts

* Add github action workflow for checking changesets

* install deps on workflow

* Setup node

* Try fixing changeset not finding main

* re-add installing deps

* Update changelog check to be own workflow

* Add documentation aroudn changesets to the contributing file

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "author": "",
   "scripts": {
     "build": "yarn workspace @hashicorp/consul-ui-toolkit run build",
+    "changeset": "changeset",
     "lint": "yarn workspaces run lint",
     "lint:fix": "yarn workspaces run lint:fix",
     "prepare": "yarn build",
+    "prerelease": "yarn prepare",
+    "release": "changeset publish",
     "start": "concurrently 'npm:start:*' --restart-after 5000 --prefix-colors cyan,white,yellow",
     "start:addon": "yarn workspace @hashicorp/consul-ui-toolkit run start",
     "start:documentation": "yarn workspace documentation run start",
@@ -21,5 +24,8 @@
   "workspaces": [
     "toolkit",
     "documentation"
-  ]
+  ],
+  "dependencies": {
+    "@changesets/cli": "^2.26.0"
+  }
 }
