--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ node_modules/
 /.node_modules.ember-try/
 /package.json.ember-try
 /yarn.lock.ember-try
-
+.idea/
 # version management tools
 .tool-versions
