--- a/documentation/package.json
+++ b/documentation/package.json
@@ -65,6 +65,7 @@
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "tracked-built-ins": "^3.1.1",
+    "typescript": "^5.0.2",
     "webpack": "^5.75.0"
   },
   "engines": {
