--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.17.0",
     "@babel/plugin-syntax-decorators": "^7.17.0",
+    "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
     "@rollup/plugin-babel": "^5.3.0",
     "concurrently": "^7.2.1",
@@ -48,7 +49,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "rollup": "^2.67.0",
-    "rollup-plugin-copy": "^3.4.0"
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-ts": "^3.2.0",
+    "typescript": "^5.0.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -60,7 +63,9 @@
     "version": 2,
     "type": "addon",
     "main": "addon-main.cjs",
-    "app-js": {}
+    "app-js": {
+      "./components/cut/fake-component.js": "./dist/_app_/components/cut/fake-component.js"
+    }
   },
   "exports": {
     ".": "./dist/index.js",
