--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -48,10 +48,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
-    "rollup": "^2.67.0",
+    "rollup": "^2.77.3",
+    "rollup-plugin-ts": "3.0.2",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-ts": "^3.2.0",
-    "typescript": "^5.0.2"
+    "typescript": "^4.7.4"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -62,7 +62,8 @@
   "ember-addon": {
     "version": 2,
     "type": "addon",
-    "main": "addon-main.cjs"
+    "main": "addon-main.cjs",
+    "app-js": {}
   },
   "exports": {
     ".": "./dist/index.js",
