--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -39,6 +39,9 @@
     "@babel/plugin-syntax-decorators": "^7.17.0",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
+    "@glint/environment-ember-loose": "^0.9.7",
+    "@glint/core": "^0.9.7",
+    "@glint/template": "^0.9.7",
     "@rollup/plugin-babel": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -51,8 +54,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "rollup": "^2.77.3",
-    "rollup-plugin-ts": "3.0.2",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-ts": "3.0.2",
     "typescript": "^4.7.4"
   },
   "publishConfig": {
