--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "build": "rollup --config",
+    "glint": "glint",
     "lint": "concurrently 'npm:lint:*(!fix)' --names 'lint:'",
     "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
     "lint:hbs": "ember-template-lint . --no-error-on-unmatched-pattern",
