updated CI and added glint to documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Lint
         run: yarn lint
       - name: Glint
-        run: yarn glint
+        run: yarn lint:types
       - name: Run Tests
         run: yarn test
 
