--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "yarn workspace @hashicorp/consul-ui-toolkit run build",
     "changeset": "changeset",
     "lint": "yarn workspaces run lint",
-    "glint": "yarn workspaces run glint",
     "lint:fix": "yarn workspaces run lint:fix",
+    "lint:types": "yarn workspaces run lint:types",
     "prepare": "yarn build",
     "prerelease": "yarn prepare",
     "release": "changeset publish",
