--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "build": "rollup --config",
+    "cleanup:local": "yalc installations clean @hashicorp/consul-ui-toolkit",
     "lint": "concurrently 'npm:lint:*(!fix)' --names 'lint:'",
     "lint:fix": "concurrently 'npm:lint:*:fix' --names 'fix:'",
     "lint:hbs": "ember-template-lint . --no-error-on-unmatched-pattern",
@@ -25,11 +26,10 @@
     "lint:hbs:fix": "ember-template-lint . --fix --no-error-on-unmatched-pattern",
     "lint:js:fix": "eslint . --fix",
     "lint:types": "glint",
-    "toolkit:publish": "yalc publish --content",
-    "toolkit:cleanup": "yalc installations clean @hashicorp/consul-ui-toolkit",
     "start": "rollup --config --watch",
     "test": "echo 'A v2 addon does not have tests, run tests in documentation'",
-    "prepack": "rollup --config"
+    "prepack": "rollup --config",
+    "publish:local": "yalc publish --content"
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.0.0"
@@ -72,9 +72,7 @@
     "version": 2,
     "type": "addon",
     "main": "addon-main.cjs",
-    "app-js": {
-      "./components/cut/consul-cards-why-consul-component/index.js": "./dist/_app_/components/cut/consul-cards-why-consul-component/index.js"
-    }
+    "app-js": {}
   },
   "exports": {
     ".": "./dist/index.js",
