--- a/documentation/package.json
+++ b/documentation/package.json
@@ -19,7 +19,7 @@
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "lint:types": "glint",
-    "start": "ember serve",
+    "start": "ember serve --port=4201",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
     "test:ember": "ember test"
   },
@@ -30,10 +30,12 @@
     "@embroider/test-setup": "^1.7.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
-    "@glint/environment-ember-loose": "^0.9.7",
     "@glint/core": "^0.9.7",
+    "@glint/environment-ember-loose": "^0.9.7",
     "@glint/template": "^0.9.7",
     "@hashicorp/consul-ui-toolkit": "^0.0.0",
+    "@hashicorp/design-system-components": "^2.0.0",
+    "@hashicorp/ember-flight-icons": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "babel-eslint": "^10.1.0",
@@ -46,6 +48,7 @@
     "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~4.11.3",
@@ -70,6 +73,7 @@
     "prettier": "^2.8.4",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
+    "sass": "^1.60.0",
     "tracked-built-ins": "^3.1.1",
     "typescript": "^4.7.4",
     "webpack": "^5.75.0"
@@ -79,5 +83,9 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "@hashicorp/design-system-tokens": "^1.4.1",
+    "tailwindcss": "^3.3.1"
   }
 }
