--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -43,6 +43,7 @@
     "@glint/core": "^0.9.7",
     "@glint/environment-ember-loose": "^0.9.7",
     "@glint/template": "^0.9.7",
+    "@hashicorp/design-system-components": "^2.0.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -57,7 +58,9 @@
     "prettier": "^2.5.1",
     "rollup": "^2.77.3",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-ts": "3.0.2",
+    "sass": "^1.60.0",
     "typescript": "^4.7.4"
   },
   "publishConfig": {
@@ -71,7 +74,13 @@
     "type": "addon",
     "main": "addon-main.cjs",
     "app-js": {
-      "./components/cut/consul-cards-why-consul-component/index.js": "./dist/_app_/components/cut/consul-cards-why-consul-component/index.js"
+      "./components/cut/consul-cards-why-consul-component/index.js": "./dist/_app_/components/cut/consul-cards-why-consul-component/index.js",
+      "./components/cut/list-item-template-set/index.js": "./dist/_app_/components/cut/list-item-template-set/index.js",
+      "./components/cut/list-item-template/index.js": "./dist/_app_/components/cut/list-item-template/index.js",
+      "./components/cut/list-item/action-generic.js": "./dist/_app_/components/cut/list-item/action-generic.js",
+      "./components/cut/list-item/action.js": "./dist/_app_/components/cut/list-item/action.js",
+      "./components/cut/list-item/content.js": "./dist/_app_/components/cut/list-item/content.js",
+      "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js"
     }
   },
   "exports": {
