--- a/documentation/package.json
+++ b/documentation/package.json
@@ -31,7 +31,7 @@
     "@glimmer/tracking": "^1.1.2",
     "@hashicorp/consul-ui-toolkit": "^0.0.0",
     "@hashicorp/design-system-components": "^2.0.0",
-    "@hashicorp/design-system-tokens": "^1.0.0",
+    "@hashicorp/design-system-tokens": "^1.4.1",
     "@hashicorp/ember-flight-icons": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -56,6 +56,7 @@
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
+    "ember-prism": "^0.13.0",
     "ember-qunit": "^6.2.0",
     "ember-resolver": "^10.0.0",
     "ember-source": "~4.11.0",
@@ -82,5 +83,6 @@
   },
   "ember": {
     "edition": "octane"
-  }
+  },
+  "dependencies": {}
 }
