--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -44,6 +44,7 @@
     "@glint/environment-ember-loose": "^0.9.7",
     "@glint/template": "^0.9.7",
     "@hashicorp/design-system-components": "^2.0.0",
+    "@hashicorp/design-system-tokens": "^1.0.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -74,13 +75,15 @@
     "type": "addon",
     "main": "addon-main.cjs",
     "app-js": {
-      "./components/cut/consul-cards-why-consul-component/index.js": "./dist/_app_/components/cut/consul-cards-why-consul-component/index.js",
       "./components/cut/list-item-template-set/index.js": "./dist/_app_/components/cut/list-item-template-set/index.js",
       "./components/cut/list-item-template/index.js": "./dist/_app_/components/cut/list-item-template/index.js",
+      "./components/cut/list-item-template/metadata.js": "./dist/_app_/components/cut/list-item-template/metadata.js",
+      "./components/cut/list-item-template/title.js": "./dist/_app_/components/cut/list-item-template/title.js",
       "./components/cut/list-item/action-generic.js": "./dist/_app_/components/cut/list-item/action-generic.js",
       "./components/cut/list-item/action.js": "./dist/_app_/components/cut/list-item/action.js",
       "./components/cut/list-item/content.js": "./dist/_app_/components/cut/list-item/content.js",
-      "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js"
+      "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js",
+      "./components/cut/text-with-icon/index.js": "./dist/_app_/components/cut/text-with-icon/index.js"
     }
   },
   "exports": {
