--- a/documentation/package.json
+++ b/documentation/package.json
@@ -35,6 +35,7 @@
     "@hashicorp/ember-flight-icons": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "@types/qunit": "latest",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^7.6.0",
