--- a/documentation/package.json
+++ b/documentation/package.json
@@ -52,6 +52,7 @@
     "ember-data": "~4.11.3",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-fetch": "^8.1.2",
+    "ember-focus-trap": "^1.0.1",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
