rebase to list-item

--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -75,7 +75,12 @@
     "app-js": {
       "./components/cut/list-item/action-generic.js": "./dist/_app_/components/cut/list-item/action-generic.js",
       "./components/cut/list-item/content.js": "./dist/_app_/components/cut/list-item/content.js",
-      "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js"
+      "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js",
+      "./components/cut/list-item/label/index.js": "./dist/_app_/components/cut/list-item/label/index.js",
+      "./components/cut/list-item/label/metadata.js": "./dist/_app_/components/cut/list-item/label/metadata.js",
+      "./components/cut/list-item/label/title.js": "./dist/_app_/components/cut/list-item/label/title.js",
+      "./components/cut/list-item/template/index.js": "./dist/_app_/components/cut/list-item/template/index.js",
+      "./components/cut/text-with-icon/index.js": "./dist/_app_/components/cut/text-with-icon/index.js"
     }
   },
   "exports": {
