--- a/documentation/package.json
+++ b/documentation/package.json
@@ -30,8 +30,7 @@
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@hashicorp/consul-ui-toolkit": "^0.0.0",
-    "@hashicorp/design-system-components": "^2.0.0",
-    "@hashicorp/design-system-tokens": "^1.4.1",
+    "@hashicorp/design-system-components": "^2.2.0",
     "@hashicorp/ember-flight-icons": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -43,9 +42,13 @@
     "ember-cli": "~4.11.0",
     "ember-cli-app-version": "^6.0.0",
     "ember-cli-babel": "^7.26.11",
+    "ember-cli-clipboard": "^0.16.0",
+    "ember-concurrency": "^2.3.7",
+    "ember-concurrency-decorators": "^2.0.3",
     "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-page-object": "^2.0.0",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
@@ -84,5 +87,7 @@
   "ember": {
     "edition": "octane"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sinon": "9.0.1"
+  }
 }
