--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -41,8 +41,8 @@
     "@babel/plugin-syntax-decorators": "^7.17.0",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
-    "@hashicorp/design-system-components": "^2.0.0",
-    "@hashicorp/design-system-tokens": "^1.0.0",
+    "@hashicorp/design-system-components": "^2.2.0",
+    "@hashicorp/design-system-tokens": "^1.5.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -62,6 +62,10 @@
     "sass": "^1.60.0",
     "typescript": "^4.7.4"
   },
+  "peerDependencies": {
+    "ember-concurrency": "^2.3.7",
+    "ember-concurrency-decorators": "^2.0.3"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
@@ -73,6 +77,7 @@
     "type": "addon",
     "main": "addon-main.cjs",
     "app-js": {
+      "./components/cut/copy-block/index.js": "./dist/_app_/components/cut/copy-block/index.js",
       "./components/cut/list-item/action-generic.js": "./dist/_app_/components/cut/list-item/action-generic.js",
       "./components/cut/list-item/content.js": "./dist/_app_/components/cut/list-item/content.js",
       "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js",
