--- a/documentation/package.json
+++ b/documentation/package.json
@@ -43,8 +43,6 @@
     "ember-cli-app-version": "^6.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-clipboard": "^0.16.0",
-    "ember-concurrency": "^2.3.7",
-    "ember-concurrency-decorators": "^2.0.3",
     "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
@@ -77,6 +75,7 @@
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "sass": "^1.60.0",
+    "sinon": "9.0.1",
     "tracked-built-ins": "^3.1.1",
     "typescript": "^4.7.4",
     "webpack": "^5.75.0"
@@ -87,7 +86,5 @@
   "ember": {
     "edition": "octane"
   },
-  "dependencies": {
-    "sinon": "9.0.1"
-  }
+  "dependencies": {}
 }
