--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -31,7 +31,9 @@
     "publish:local": "yalc publish --content"
   },
   "dependencies": {
-    "@embroider/addon-shim": "^1.0.0"
+    "@embroider/addon-shim": "^1.0.0",
+    "ember-concurrency": "^2.3.7",
+    "ember-concurrency-decorators": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
@@ -61,10 +63,6 @@
     "rollup-plugin-ts": "3.0.2",
     "sass": "^1.60.0",
     "typescript": "^4.7.4"
-  },
-  "peerDependencies": {
-    "ember-concurrency": "^2.3.7",
-    "ember-concurrency-decorators": "^2.0.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
