--- a/documentation/package.json
+++ b/documentation/package.json
@@ -32,9 +32,9 @@
     "@hashicorp/consul-ui-toolkit": "^0.0.0",
     "@hashicorp/design-system-components": "^2.2.0",
     "@hashicorp/ember-flight-icons": "^3.0.2",
+    "@types/qunit": "latest",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
-    "@types/qunit": "latest",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^7.6.0",
@@ -64,6 +64,7 @@
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^5.6.0",
     "ember-try": "^2.0.0",
+    "ember-url-hash-polyfill": "^1.0.8",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-ember": "^11.4.7",
