--- a/documentation/package.json
+++ b/documentation/package.json
@@ -63,6 +63,7 @@
     "ember-source": "~4.11.0",
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^5.6.0",
+    "ember-truth-helpers": "^3.1.1",
     "ember-try": "^2.0.0",
     "ember-url-hash-polyfill": "^1.0.8",
     "eslint": "^7.32.0",
