--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -38,8 +38,12 @@
   "devDependencies": {
     "@babel/core": "^7.17.0",
     "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.17.0",
+    "@babel/plugin-proposal-json-strings": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.18.6",
     "@babel/plugin-syntax-decorators": "^7.17.0",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
@@ -60,7 +64,7 @@
     "rollup": "^2.77.3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-ts": "3.0.2",
+    "rollup-plugin-ts": "3.2.0",
     "sass": "^1.60.0",
     "typescript": "^4.7.4"
   },
