--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -88,6 +88,7 @@
       "./components/cut/filter-bar/filter/generic.js": "./dist/_app_/components/cut/filter-bar/filter/generic.js",
       "./components/cut/filter-bar/filter/index.js": "./dist/_app_/components/cut/filter-bar/filter/index.js",
       "./components/cut/filter-bar/filter/radio.js": "./dist/_app_/components/cut/filter-bar/filter/radio.js",
+      "./components/cut/filter-bar/generic.js": "./dist/_app_/components/cut/filter-bar/generic.js",
       "./components/cut/filter-bar/index.js": "./dist/_app_/components/cut/filter-bar/index.js",
       "./components/cut/filter-bar/search.js": "./dist/_app_/components/cut/filter-bar/search.js",
       "./components/cut/filter-bar/sort-group.js": "./dist/_app_/components/cut/filter-bar/sort-group.js",
