--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -85,6 +85,7 @@
       "./components/cut/filter-bar/filter-group.js": "./dist/_app_/components/cut/filter-bar/filter-group.js",
       "./components/cut/filter-bar/filter/checkbox.js": "./dist/_app_/components/cut/filter-bar/filter/checkbox.js",
       "./components/cut/filter-bar/filter/checkmark.js": "./dist/_app_/components/cut/filter-bar/filter/checkmark.js",
+      "./components/cut/filter-bar/filter/filter-input.js": "./dist/_app_/components/cut/filter-bar/filter/filter-input.js",
       "./components/cut/filter-bar/filter/generic.js": "./dist/_app_/components/cut/filter-bar/filter/generic.js",
       "./components/cut/filter-bar/filter/index.js": "./dist/_app_/components/cut/filter-bar/filter/index.js",
       "./components/cut/filter-bar/filter/radio.js": "./dist/_app_/components/cut/filter-bar/filter/radio.js",
