--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -106,6 +106,10 @@
       "./components/cut/list-item/service-instance/index.js": "./dist/_app_/components/cut/list-item/service-instance/index.js",
       "./components/cut/list-item/service/index.js": "./dist/_app_/components/cut/list-item/service/index.js",
       "./components/cut/list-item/template/index.js": "./dist/_app_/components/cut/list-item/template/index.js",
+      "./components/cut/list/contents/empty.js": "./dist/_app_/components/cut/list/contents/empty.js",
+      "./components/cut/list/contents/generic.js": "./dist/_app_/components/cut/list/contents/generic.js",
+      "./components/cut/list/contents/items.js": "./dist/_app_/components/cut/list/contents/items.js",
+      "./components/cut/list/index.js": "./dist/_app_/components/cut/list/index.js",
       "./components/cut/metadata/external-source/index.js": "./dist/_app_/components/cut/metadata/external-source/index.js",
       "./components/cut/metadata/health-check-badge-set/index.js": "./dist/_app_/components/cut/metadata/health-check-badge-set/index.js",
       "./components/cut/metadata/in-service-mesh/index.js": "./dist/_app_/components/cut/metadata/in-service-mesh/index.js",
