--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.0.0",
+    "@ungap/structured-clone": "^1.2.0",
     "ember-composable-helpers": "^5.0.0",
     "ember-concurrency": "^2.3.7",
     "ember-concurrency-decorators": "^2.0.3"
@@ -45,17 +46,18 @@
     "@babel/plugin-proposal-json-strings": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-catch-binding": "^7.18.6",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@babel/plugin-syntax-decorators": "^7.17.0",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
     "@hashicorp/design-system-components": "^2.8.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
+    "@types/ungap__structured-clone": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "concurrently": "^7.2.1",
     "ember-inflector": "^4.0.2",
-    "ember-set-helper": "^2.0.1",
     "ember-template-lint": "^4.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
