--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -51,7 +51,7 @@
     "@babel/plugin-transform-typescript": "^7.22.10",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
-    "@hashicorp/design-system-components": "2.8.1",
+    "@hashicorp/design-system-components": "^2.9.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
     "@types/ungap__structured-clone": "^0.3.0",
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "concurrently": "^7.2.1",
     "ember-inflector": "^4.0.2",
+    "ember-cli-clipboard": "^1.0.0",
     "ember-template-lint": "^4.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
