--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -50,7 +50,7 @@
     "@babel/plugin-syntax-decorators": "^7.17.0",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
-    "@hashicorp/design-system-components": "^2.8.1",
+    "@hashicorp/design-system-components": "2.8.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
     "@types/ungap__structured-clone": "^0.3.0",
