CC-5552/filter bar (#42)
* [DRAFT] hit issue with passing checked function

* [DRAFT] state, checkbox, checkmarks working

* Update filter shapes and update functions

* Hook up applied filters

* Hook up clear filters button

* Hook up the batch button for filters

* Pass the functions into radio and generic components

* Hook up search filter

* Remove PreFilter component

* Updating showing result count to reflect passed in count

* Put a draft example of the code in the docs

* Address linting

* Fix regex

* Hook up sort

* Add generic slot

* Add Filter generic

* Add FilterInput for filtering filters

* Add radio filter

* Update toggle types

* Work in required filters

* Update batch and filter input to use header and footer

* Update docs to no specify toggle color

* Show counts on single filter values

* Change isChecked into a simple helper function

* Add tests for filter bar

* Add changeset

* Move titlecase helper function to global helper

* Update types to use unknown

* Add some comments

* Add development flag to filter-bar docs

* Typo

* Update clear-filters button to be small

* Only show clear filters if there is a non-required filter

* Fix state issues and clear some dependencies

* Make Filter Input Label optional and dynamic

* Add optional totalCount

* Pin HDS

* Pin it again

--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@embroider/addon-shim": "^1.0.0",
+    "@ungap/structured-clone": "^1.2.0",
     "ember-composable-helpers": "^5.0.0",
     "ember-concurrency": "^2.3.7",
     "ember-concurrency-decorators": "^2.0.3"
@@ -45,15 +46,18 @@
     "@babel/plugin-proposal-json-strings": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-catch-binding": "^7.18.6",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@babel/plugin-syntax-decorators": "^7.17.0",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
-    "@hashicorp/design-system-components": "^2.8.1",
+    "@hashicorp/design-system-components": "2.8.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@types/ember": "^4.0.3",
+    "@types/ungap__structured-clone": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "concurrently": "^7.2.1",
+    "ember-inflector": "^4.0.2",
     "ember-template-lint": "^4.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -80,6 +84,19 @@
     "main": "addon-main.cjs",
     "app-js": {
       "./components/cut/copy-block/index.js": "./dist/_app_/components/cut/copy-block/index.js",
+      "./components/cut/filter-bar/filter-group.js": "./dist/_app_/components/cut/filter-bar/filter-group.js",
+      "./components/cut/filter-bar/filter/checkbox.js": "./dist/_app_/components/cut/filter-bar/filter/checkbox.js",
+      "./components/cut/filter-bar/filter/checkmark.js": "./dist/_app_/components/cut/filter-bar/filter/checkmark.js",
+      "./components/cut/filter-bar/filter/filter-input.js": "./dist/_app_/components/cut/filter-bar/filter/filter-input.js",
+      "./components/cut/filter-bar/filter/generic.js": "./dist/_app_/components/cut/filter-bar/filter/generic.js",
+      "./components/cut/filter-bar/filter/index.js": "./dist/_app_/components/cut/filter-bar/filter/index.js",
+      "./components/cut/filter-bar/filter/radio.js": "./dist/_app_/components/cut/filter-bar/filter/radio.js",
+      "./components/cut/filter-bar/generic.js": "./dist/_app_/components/cut/filter-bar/generic.js",
+      "./components/cut/filter-bar/index.js": "./dist/_app_/components/cut/filter-bar/index.js",
+      "./components/cut/filter-bar/search.js": "./dist/_app_/components/cut/filter-bar/search.js",
+      "./components/cut/filter-bar/sort-group.js": "./dist/_app_/components/cut/filter-bar/sort-group.js",
+      "./components/cut/filter-bar/sort/checkmark.js": "./dist/_app_/components/cut/filter-bar/sort/checkmark.js",
+      "./components/cut/filter-bar/sort/index.js": "./dist/_app_/components/cut/filter-bar/sort/index.js",
       "./components/cut/list-item/action-generic.js": "./dist/_app_/components/cut/list-item/action-generic.js",
       "./components/cut/list-item/content.js": "./dist/_app_/components/cut/list-item/content.js",
       "./components/cut/list-item/index.js": "./dist/_app_/components/cut/list-item/index.js",
@@ -94,6 +111,7 @@
       "./components/cut/metadata/in-service-mesh/index.js": "./dist/_app_/components/cut/metadata/in-service-mesh/index.js",
       "./components/cut/metadata/tags/index.js": "./dist/_app_/components/cut/metadata/tags/index.js",
       "./components/cut/text-with-icon/index.js": "./dist/_app_/components/cut/text-with-icon/index.js",
+      "./helpers/titlecase.js": "./dist/_app_/helpers/titlecase.js",
       "./utils/service-list-item.js": "./dist/_app_/utils/service-list-item.js"
     }
   },
