--- a/documentation/package.json
+++ b/documentation/package.json
@@ -80,6 +80,7 @@
     "sinon": "9.0.1",
     "tracked-built-ins": "^3.1.1",
     "typescript": "^4.7.4",
+    "uuid": "^9.0.0",
     "webpack": "^5.75.0"
   },
   "engines": {
