CC-5553: list component second branch (#45)
* Initial draft of List component

* Pagination formatting

* Hook up next page stuff and routes

* Finish hooking up pagination

* Set up demo

* include count in demo

* Add headers

* changeset

* Cleanup and add comments

* Remove log in model

--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -48,6 +48,7 @@
     "@babel/plugin-proposal-optional-catch-binding": "^7.18.6",
     "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@babel/plugin-syntax-decorators": "^7.17.0",
+    "@babel/plugin-transform-typescript": "^7.22.10",
     "@babel/preset-typescript": "^7.21.0",
     "@embroider/addon-dev": "^3.0.0",
     "@hashicorp/design-system-components": "2.8.1",
@@ -106,6 +107,10 @@
       "./components/cut/list-item/service-instance/index.js": "./dist/_app_/components/cut/list-item/service-instance/index.js",
       "./components/cut/list-item/service/index.js": "./dist/_app_/components/cut/list-item/service/index.js",
       "./components/cut/list-item/template/index.js": "./dist/_app_/components/cut/list-item/template/index.js",
+      "./components/cut/list/contents/empty.js": "./dist/_app_/components/cut/list/contents/empty.js",
+      "./components/cut/list/contents/generic.js": "./dist/_app_/components/cut/list/contents/generic.js",
+      "./components/cut/list/index.js": "./dist/_app_/components/cut/list/index.js",
+      "./components/cut/list/pagination.js": "./dist/_app_/components/cut/list/pagination.js",
       "./components/cut/metadata/external-source/index.js": "./dist/_app_/components/cut/metadata/external-source/index.js",
       "./components/cut/metadata/health-check-badge-set/index.js": "./dist/_app_/components/cut/metadata/health-check-badge-set/index.js",
       "./components/cut/metadata/in-service-mesh/index.js": "./dist/_app_/components/cut/metadata/in-service-mesh/index.js",
