--- a/documentation/package.json
+++ b/documentation/package.json
@@ -30,7 +30,7 @@
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@hashicorp/consul-ui-toolkit": "^0.1.0",
-    "@hashicorp/design-system-components": "2.8.1",
+    "@hashicorp/design-system-components": "^2.10.0",
     "@hashicorp/ember-flight-icons": "^3.0.6",
     "@types/qunit": "latest",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -42,7 +42,7 @@
     "ember-cli": "~4.11.0",
     "ember-cli-app-version": "^6.0.0",
     "ember-cli-babel": "^7.26.11",
-    "ember-cli-clipboard": "^0.16.0",
+    "ember-cli-clipboard": "^1.0.0",
     "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
