--- a/toolkit/tsconfig.json
+++ b/toolkit/tsconfig.json
@@ -11,8 +11,5 @@
     "strict": true,
     "declaration": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ]
+  "include": ["src/**/*", "types/**/*"]
 }
