--- a/toolkit/tsconfig.json
+++ b/toolkit/tsconfig.json
@@ -1,15 +1,9 @@
 {
+  "extends": "@tsconfig/ember/tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "es2015",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "strict": true,
-    "declaration": true
+    "baseUrl": ".",
+    "allowJs": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "types/**/*"]
 }
