--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hashicorp/consul-ui-toolkit",
   "version": "1.0.1",
+  "private": false,
   "description": "The default blueprint for Embroider v2 addons.",
   "keywords": [
     "ember-addon"
