--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ node_modules/
 .idea/
 # version management tools
 .tool-versions
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
