CC-7195: upgrade deps (#90)
* Set yarn version to stable

* Upgrade toolkit embroider and babel deps

* Upgrade TS related packages for the toolkit

* Upgrade eslint and prettier packages

* Prettier

* Upgrade concurrency packages, set ember-source peer dep

* Upgrade changeset cli

* Run ember-cli-update on documentation app

* Fix test command

* Upgrade ember-template-lint

* Upgrade test-setup, qunit, ts in documentation app

* Upgrade sinon

* Upgrade stylelint packages

* Change test command to just run documentation tests

* Upgrade HDS in documentation app

* Remaining minor/patch upgrades

* Update stylelint commands

* Run stylelint on documentation app

* Fix or ignore template lint errors

* Changeset

* Give us node 18

* Stop ignoring the yarn folder

* Set yarn version with yarn path

* Update yarn install commands

* copywrite

* Add explicit prepare command to CI

* Turn off immutable installs in floating deps CI

* Stop using --no-lockfile in ember-try

* enable immutable installs

* Update gitignore

* Update HDS and run yarn dedupe

* Pin ember dev dependencies on ember-try scenarios

* Update changeset

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,12 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: yarn
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
+      - name: Prepare Toolkit
+        run: yarn prepare
       - name: Lint
         run: yarn lint
       - name: Run Tests
@@ -51,10 +53,14 @@ jobs:
 
       - uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: yarn
+      - name: Remove lockfile
+        run: rm yarn.lock
       - name: Install Dependencies
-        run: yarn install --no-lockfile
+        run: YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
+      - name: Prepare Toolkit
+        run: yarn prepare
       - name: Run Tests
         run: yarn test
 
@@ -81,10 +87,14 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
-          node-version: 16.x
+          node-version: 18.x
           cache: yarn
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
+      - name: Prepare Toolkit
+        run: yarn prepare
       - name: Run Tests
-        run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }}
+        run: yarn ember try:one ${{ matrix.try-scenario }}
         working-directory: documentation
+        env:
+          YARN_ENABLE_IMMUTABLE_INSTALLS: false
