--- a/toolkit/package.json
+++ b/toolkit/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@hashicorp/consul-ui-toolkit",
   "version": "3.0.0",
-  "private": false,
   "description": "The default blueprint for Embroider v2 addons.",
   "keywords": [
     "ember-addon"
@@ -33,51 +32,55 @@
     "publish:local": "yalc publish --content"
   },
   "dependencies": {
-    "@embroider/addon-shim": "^1.0.0",
+    "@embroider/addon-shim": "^1.8.7",
     "@ungap/structured-clone": "^1.2.0",
     "ember-composable-helpers": "^5.0.0",
-    "ember-concurrency": "^2.3.7",
+    "ember-concurrency": "^3.1.1",
     "ember-concurrency-decorators": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
-    "@babel/eslint-parser": "^7.18.2",
+    "@babel/core": "^7.23.6",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.17.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.23.6",
     "@babel/plugin-proposal-json-strings": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-catch-binding": "^7.18.6",
     "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
-    "@babel/plugin-syntax-decorators": "^7.17.0",
-    "@babel/plugin-transform-typescript": "^7.22.10",
-    "@babel/preset-typescript": "^7.21.0",
-    "@embroider/addon-dev": "^3.0.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@tsconfig/ember": "^3.0.0",
-    "@types/ember": "^4.0.3",
-    "@types/ungap__structured-clone": "^0.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "concurrently": "^7.2.1",
-    "ember-cli-clipboard": "^1.0.0",
+    "@babel/plugin-syntax-decorators": "^7.23.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/plugin-transform-typescript": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-typescript": "^7.23.3",
+    "@embroider/addon-dev": "^4.1.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@tsconfig/ember": "^3.0.3",
+    "@types/ember": "^4.0.10",
+    "@types/ungap__structured-clone": "^0.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "concurrently": "^8.2.2",
+    "ember-cli-clipboard": "^1.1.0",
     "ember-inflector": "^4.0.2",
-    "ember-template-lint": "^4.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^10.5.8",
+    "ember-template-lint": "^5.13.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-ember": "^11.12.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "rollup": "^2.77.3",
-    "rollup-plugin-copy": "^3.4.0",
+    "eslint-plugin-prettier": "^5.1.1",
+    "prettier": "^3.1.1",
+    "rollup": "^3.29.4",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-ts": "3.2.0",
-    "sass": "^1.60.0",
-    "typescript": "^5.1.6"
+    "rollup-plugin-ts": "3.4.5",
+    "sass": "^1.69.5",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "@hashicorp/design-system-components": "^3.0.2"
+    "@hashicorp/design-system-components": "^3.4.0",
+    "ember-source": "^3.28.0 || ^4.0.0 || >=5.0.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
